# rlottie-python

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  check_and_fix.yml  upload_pypi.yml  upload_pypi_test.yml
docs/: comparing.md  conf.py  credits.md  examples.md  index.rst  installing.md  modules.rst  requirements.txt  rlottie_python.rst
docs/_static/css/: rtd_dark.css
example/: example.py
rlottie_python/: __init__.py  rlottie_wrapper.py  rlottiecommon.py
src/rlottie_python/: __init__.py  _rlottiecommon.py  rlottie_wrapper.py
tests/: test_all.py
