[project] # Project metadata
name = "rlottie-python"
description = "A ctypes API for rlottie, with additional functions for getting Pillow Image."
requires-python = ">=3.7"
readme = "README.md"
license = { "file" = "LICENSE" }
authors = [{ "name" = "chaudominic", "email" = "chaudominic2@gmail.com" }]
keywords = ["rlottie", "lottie", "tgs", "ctypes"]
classifiers = ["Topic :: Multimedia :: Graphics"]
dependencies = ["Pillow"]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/laggykiller/rlottie-python"
Documentation = "https://github.com/laggykiller/rlottie-python"
Tracker = "https://github.com/laggykiller/rlottie-python/issues"

[build-system] # How pip and other frontends should build this project
requires = ["py-build-cmake~=0.1.2"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module] # Where to find the Python module to package
name = "rlottie_python"
directory = "."

[tool.py-build-cmake.sdist] # What to include in source distributions
include = ["CMakeLists.txt", "rlottie/*"]

[tool.py-build-cmake.cmake] # How to build the CMake project
build_type = "RelWithDebInfo"
source_path = "."
build_args = ["-j"]
install_components = ["python_module"]

# stubgen depends on mypy, which depends on typed-ast
# typed-ast cannot run on pypy <3.8
# https://mypy.readthedocs.io/en/stable/faq.html
# [tool.py-build-cmake.stubgen] # Whether and how to generate typed stub files
