[project] # Project metadata
name = "rlottie-python"
description = "A ctypes API for rlottie, with additional functions for getting Pillow Image."
requires-python = ">=3.7"
readme = "README.md"
license = { "file" = "LICENSE" }
authors = [{ "name" = "chaudominic", "email" = "chaudominic2@gmail.com" }]
keywords = ["rlottie", "lottie", "tgs", "ctypes"]
classifiers = ["Topic :: Multimedia :: Graphics"]
dependencies = []
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/laggykiller/rlottie-python"
Documentation = "https://rlottie-python.readthedocs.io/en/latest/"
Tracker = "https://github.com/laggykiller/rlottie-python/issues"

[build-system] # How pip and other frontends should build this project
requires = ["py-build-cmake~=0.2.0a7"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module] # Where to find the Python module to package
name = "rlottie_python"
directory = "."

[tool.py-build-cmake.sdist] # What to include in source distributions
include = ["CMakeLists.txt", "rlottie/*"]

[tool.py-build-cmake.cmake] # How to build the CMake project
build_type = "Release"
source_path = "."
build_args = ["-j"]
install_components = ["python_module"]
python_abi = 'abi3'
abi3_minimum_cpython_version = 312

[tool.py-build-cmake.linux.cmake] # Linux-specific options
config = "Release"
env = { "CMAKE_PREFIX_PATH" = "${HOME}/.local" }
[tool.py-build-cmake.linux.cmake.options]
CMAKE_CXX_FLAGS = "-fPIC"

[tool.py-build-cmake.mac.cmake] # macOS-specific options
config = "Release"

[tool.py-build-cmake.windows.cmake] # Windows-specific options
config = "Release"
[tool.py-build-cmake.windows.cmake.options]
CMAKE_MSVC_RUNTIME_LIBRARY = "MultiThreaded$<$<CONFIG:Debug>:Debug>"
CMAKE_CXX_FLAGS_RELEASE = "/MT"
CMAKE_CXX_FLAGS_DEBUG = "/MTd"